added basic testing

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,7 @@ if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
 endif()
 
 find_package(ament_cmake REQUIRED)
+find_package(GTest REQUIRED)
 find_package(rclcpp REQUIRED)
 find_package(geometry_msgs REQUIRED)
 find_package(sensor_msgs REQUIRED)
@@ -55,5 +56,19 @@ add_executable(keyboard_demo
     src/keyboard_input_processor_demo.cpp
     src/keyboard_input_processor.cpp)
 install(TARGETS keyboard_demo DESTINATION lib/${PROJECT_NAME})
+
+
+if(BUILD_TESTING)
+    add_executable(tests 
+        test/test_speed_controller.cpp
+        src/speed_controller.cpp)
+    target_link_libraries(tests PUBLIC 
+        GTest::gtest_main
+        rclcpp::rclcpp
+        ${geometry_msgs_TARGETS}
+        ${sensori_msgs_TARGETS} sensor_msgs::sensor_msgs_library
+        ${std_msgs_TARGETS})
+    install(TARGETS tests DESTINATION share/${PROJECT_NAME}/test)
+endif()
 
 ament_package()
